[package]
name = "leet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0.30"
clap = { version = "3.1.8", features = ["derive"] }
log4rs = "1.0.0"
log = "0.4"
