[package]
name = "leet"
version = "0.1.0"
edition = "2021"
license = "BSD-3"

[[bin]]
path = "src/main.rs"
name = "leet"

[profile.release]
strip = true
opt-level = 3

[dependencies]
serde = { version="1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0.30"
clap = { version = "3.1.8", features = ["derive"] }
log4rs = "1.0.0"
log = "0.4"
