[package]
name = "leet"
version = "0.1.0"
edition = "2021"
license = "BSD-3"

[[bin]]
path = "src/main.rs"
name = "leet"

[profile.release]
strip = true
opt-level = 3

[dependencies]
serde = { version="1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0.30"
clap = { version = "3.1.8", features = ["derive"] }
log4rs = "1.0.0"
log = "0.4"
tokio = { version = "1.28.0", features = ["macros", "rt", "rt-multi-thread"] }
cynic = { version = "2.2.8", features = ["surf", "http-surf"] }
surf = "2.3.2"
mustache = "0.9.0"
handlebars = { version = "4.3.7", features = ["no_logging"] }

[dev-dependencies]
insta = "1"
